apps/falco/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco-metrics
  namespace: falco-system
  labels:
    app.kubernetes.io/name: falco
spec:
  selector:
    app.kubernetes.io/name: falco
  ports:
    - name: http-metrics
      port: 8765
      targetPort: http-metrics
      protocol: TCP
  type: ClusterIP
